# triathlon-be

./: .gitignore  Cargo.toml  README.md
migrations/: 20250621153921_create_users_table.sql  20250718153525_create_revoked_tokens.sql
src/: config.rs  db.rs  logging.rs  main.rs  response.rs
src/auth/: login.rs  logout.rs  mod.rs  register.rs
src/index/: get_index.rs  mod.rs
src/middleware/: auth.rs
