[package]
name = "triathlon-be"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = {version = "1.0.217", features = ["derive"]}
env_logger = "0.11.3"
log = "0.4.27"
actix-cors = "0.7.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "mysql", "chrono" ] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
serde_json = "1.0.140"
dotenv = "0.15.0"
chrono = "0.4.41"
futures = "0.3.31"
